unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/Approved_Garage_Type_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For the query of approved garage to RADAR case triage application. Need to make sure that the combination of Service Type, Tow Service Reason, and Vehicle Type are unique.</description>
    <label>Approved Garage Type Mapping</label>
</CustomObject>