unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Approved_Garage_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Garage_Type__c</fullName>
    <label>Approved Garage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>