unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Ignore_Make__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Make__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Make?</label>
    <type>Checkbox</type>
</CustomField>