unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Ignore_Type__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, coding logic will ignore vehicle type</description>
    <label>Ignore Vehicle Type?</label>
    <type>Checkbox</type>
</CustomField>