unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Limit_search_result__c.field-meta.xml
<CustomField>
    <fullName>Limit_search_result__c</fullName>
    <label>Limit search result</label>
    <length>10</length>
    <type>Text</type>
</CustomField>