unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>If Service Type is blank, it means this mapping will ignore service types.</inlineHelpText>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>