unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/fields/Tow_Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Reason__c</fullName>
    <label>Tow Service Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>