unpackaged/main/default/objects/Approved_Garage_Type_Mapping__c/listViews/All_Approved_Garage_Mapping.listView-meta.xml
<ListView>
    <fullName>All_Approved_Garage_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Approved_Garage_Type__c</columns>
    <columns>Ignore_Make__c</columns>
    <columns>Ignore_Type__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Tow_Service_Reason__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Approved Garage Mapping</label>
    <language>en_US</language>
</ListView>